# plutus-cert

./: .Makefile.d  .gitignore  .gitmodules  CITATION.cff  Makefile  Makefile.conf  README.md  README_thesis.md  Setup.hs  _CoqProject  flake.nix  plutus-cert.cabal  printDep.sh  shell.nix  type_check.hs  type_check.hs.out
Examples/: alpha_def.v
cache/: Print.v
examples/recursion/: cabal.project  example.cabal
examples/recursion/src/: Lib.hs
examples/timelock/: README.md  compilation-trace  compilation-trace-readable  example.cabal
examples/timelock/dump-notes/: 2-desugarer-before-opt  3-desugarer-after-opt  3-desugarer-after-opt.reordered  4-simplifier-unfoldings  5-pir  6-pir-simplified  7-plc  8-plc-program  ghc-dump.txt  ghci-dump.txt  pipeline  pipeline-dumps
examples/timelock/src/: Lib.hs
notes/: adt-semantics.tex  pipeline.md  refactoring-ideas.md  refactoring-observations  refactoring-observations.md  status-transl-rels  status-transl-rels.md
src/: .Meta.aux  .Util.aux  Language.v  Meta.v  PlutusIR.v  Util.v
src/Examples/: ListSpec.v  MaybeFun.v  Timelock.v  TimelockDumps.v  TimelockTest.v  TypeCheckTest.hs  TypeCheckTest.v  compilation-trace  compilation-trace-fix_shadowing
src/Examples/MutualRecursion/: Fixpoint.v  Trace.v  compilation-trace
src/Examples/Timelock/: Experiment.v  Note.md  Trace.v  Typing.v
src/Examples/TypeChecker/: NormalizerGas.v
src/Extractions/: normaliser.hs  term.hs
src/Language/: .PlutusIR.aux  CorePIR.v  PIR.v  PlutusIR.v  PlutusIR_2.v
src/Language/PlutusIR/: .Examples.aux  .Folds.aux  .Transform.aux  Conversion.v  DecOpt.v  Folds.v  Transform.v
src/Language/STLC/: STLC.v
src/PlutusIR/: Extract.v  Folds.v  Parser.v  Transform.v
src/PlutusIR/Analysis/: BoundVars.v  Purity.v  (+6 more)
src/Util/: DecOpt.v  In.v  List.v  Map.v  Tactics.v
(+495 files in other folders)
