cabal-version:      3.0
name:               plutus-cert
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jacco Krijnen
maintainer:         j.o.g.krijnen@uu.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: src/**/*.v
                    _CoqProject
                    Makefile
                    lib/QuickChick/_CoqProject
                    lib/QuickChick/Makefile
                    lib/QuickChick/Makefile.coq.local
                    lib/coq-ctproxy/_CoqProject
                    lib/coq-ctproxy/Makefile
                    lib/**/*.v
                    lib/**/*.ml
                    lib/**/*.mlpack
                    lib/**/*.mli
                    lib/**/*.mll
                    lib/**/*.mly
                    lib/**/*.mlg
                    lib/**/*.pl

-- This makes cabal rebuild if any of these files change, which allow the
-- custom setup to fire and rebuild the Haskell sources
build-type:         Custom

custom-setup
  setup-depends:
    , base
    , Cabal
    , process
    , turtle

library
    hs-source-dirs:   hs-src

    build-depends:
      , base                        >=4.9     && <5
    exposed-modules:  PlutusIR.Certifier.Extracted
    autogen-modules:  PlutusIR.Certifier.Extracted

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-language: Haskell2010
